--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "eslint": "^7.31.0",
+    "eslint-plugin-vue": "^7.14.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.1",
